--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p> because it my passion and i want to growth in my career as  well as in kiving expenses.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
